--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,12 @@ dependencies:
     sdk: flutter
 
   flutter_screenutil: 5.9.0
+  flutter_speed_dial: 7.0.0
   get: 4.6.6
   google_fonts: 4.0.4
+  path: 1.8.3
+  path_provider: 2.1.3
+  sqflite: 2.3.2
 
 dev_dependencies:
   flutter_test:
